--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,17 @@
   box-sizing: border-box;
 }
 
+body,header,footer{
+  width: 1200px;
+}
+
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+
 }
 section{
   padding: 70px 0;
@@ -259,3 +264,183 @@ section{
     padding: 30px 0;
     text-align: center;
   }
+
+/* Seccion ABOUT*/
+
+.About{
+
+  /*position: relative;
+  width: 1200px;
+  height: 877px;
+  /*left: 0px;*/
+  /*top: 3976px;
+  display: block;*/
+  background: #FFF5F6;
+}
+
+.container-about{
+  display: flex;
+ 
+
+  background: #FFFFFF;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  justify-content: space-between;
+  /* justify-content: space-evenly; */
+  padding: 0px 16px;
+  /* margin: 0px 16px; */
+
+
+}
+
+ .About .container-about .Aboutcard{
+  display: block; 
+  width: 368px;
+  height: 538px;
+  padding-left: 40px;
+  /* justify-content: space-between;*/
+  /*flex-wrap: wrap;*/
+  /*align-items: flex-end;*/
+
+
+  background: #FFFFFF;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+
+  
+ }
+
+ .About .container-about .Aboutcard .button-coffee{
+
+  
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  border: #F0D1A5;
+  
+/* or 30px */
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+
+  width: 75.1px;
+  height: 28px;
+
+  background: #F0D1A5;
+  border-radius: 6px;
+  margin-bottom: 32px;
+  margin-top: 40px;
+
+ }
+
+ .About .container-about .Aboutcard .button-green{
+
+
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  border: #C2E297;
+/* or 30px */
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+
+  width: 138px;
+  height: 28px;
+  
+  background: #C2E297;
+  border-radius: 6px;
+  margin-bottom: 32px;
+  margin-top: 40px;
+ }
+
+.separador{
+  width: 288px;
+  height: 0px;
+  display: flex;
+  margin-bottom: 32px;
+  margin-top: 32px; 
+  
+
+  border: 1px solid #E1E1E1;
+
+}
+
+.button-coffee > h3 {
+  margin-bottom: 32px;
+
+  width: 67.9px;
+  height: 30px;
+
+
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  /* identical to box height, or 30px */
+
+  letter-spacing: 0.04em;
+
+  color: #000000;
+
+}
+
+.text-card{
+margin-bottom: 32px;
+margin-top: 8px;
+width: 250px;
+height: 50px;
+
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 183%;
+/* or 29px */
+
+letter-spacing: 0.04em;
+
+color: #907E82;
+
+}
+.hour-card{
+margin-bottom: 12px;
+width: 167.7px;
+height: 30px;
+
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 186%;
+/* identical to box height, or 30px */
+
+
+color: #FFA5BA;
+}
+.contact-card{
+margin-bottom: 40px;
+width: 243px;
+height: 50px;
+
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 183%;
+/* or 29px */
+
+
+color: #907E82;
+
+}
