--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
-/* @import url("https://fonts.googleapis.com/css2?family=Titan+One:wght@400;700&display=swap"); */
-@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Titan+One:wght@400;700&display=swap");
+/* @import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap'); */
 :root {
 
   --gray-button: #E5E5E5;
@@ -14,6 +14,8 @@
   --button-primary-hover: #D41443;
   --pink-2: #D41443;
   --pink-1: #FFA5BA;
+  --coffee-ice: #F0D1A5;
+  --green-ice: #C2E297;
   --pink-back-1: #FFB8CA;
   --pink-back-2: #FFF5F6;
   --text-color-1: #907E82;
@@ -31,7 +33,7 @@
 }
 
 body,header,footer{
-  width: 1200px;
+  width: 1280px;
 }
 
 body {
@@ -75,7 +77,8 @@ section{
   }
   header{
     background-color: var(--pink-back-1);
-    height: 80px;
+    /* height: 8px; */
+    
   }
   
   header .container{
@@ -88,18 +91,15 @@ section{
   header .container nav{
     display: flex;
     align-items: center;
-    gap: 100px;
+    height: 80px;
+    /* gap: 100px; */
   
   }
   
   header .container nav .logo{
     margin-top: 100px;
     color: var(--pink-2);
-    font-family: "Raleway", sans-serif;
-    /* font-size: 26px;
-    font-weight: 700;
-    line-height: 1.2;
-    text-decoration: none; */
+    
   }
   
   header .container nav .navbar_menu{
@@ -118,11 +118,11 @@ section{
     text-transform: capitalize;
   }
   
-  header .container .navbar_buy{
+  /* header .container .navbar_buy{
     display: flex;
     list-style: none;
     gap: 80px;
-  }
+  } */
   
   header .container .navbar_menu .page:hover,
   header .container .navbar_menu .page:focus,
@@ -135,10 +135,10 @@ section{
     background-color: var(--pink-back-1);
     display: flex;
     position: relative;
+    z-index: 1;
   }
 
   .banner-index .col-1 .baner-title{
-    /* margin: 23px auto;  */
     color: white;
 
     position: relative;
@@ -242,6 +242,556 @@ section{
     margin-top: 103px;    
 }
 
+.banner-index .col-3 ul li .icon-circle {
+  display: inline-flex;
+  height: 30px;
+  width: 30px;
+  z-index: -1; 
+  border-radius: 50%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #ffff;
+  position: absolute;
+}
+.banner-index .col-3 ul li span{
+  left: 34px;
+}
+
+/*ANIMATION*/
+
+/*BUBBLES*/
+
+.bg_container{
+  width: 100%;
+}
+
+.bubble{
+ 
+  border-radius: 50%;
+  background:#FFFFFF;
+  opacity: 0.3;
+
+  position: absolute;
+  bottom: 0;
+  
+
+  animation: bubbles 3s linear infinite ;
+}
+
+.bubble:nth-child(1) {
+  width: 80px;
+  height: 80px; 
+  left: 5%;
+  animation-duration: 3s;
+  animation-delay: 1s;
+}
+
+
+.bubble:nth-child(2) {
+  width: 100px;
+  height: 100px; 
+  left: 10%;
+  animation-duration: 3s;
+  animation-delay: 2s;
+}
+
+.bubble:nth-child(3) {
+  width: 80px;
+  height: 80px; 
+  left: 15%;
+  animation-duration: 4s;
+  animation-delay: 1s;
+}
+
+.bubble:nth-child(4) {
+  width: 90px;
+  height: 90px; 
+  left: 25%;
+  animation-duration: 3s;
+  animation-delay: 2s;
+}
+
+.bubble:nth-child(5) {
+  width: 80px;
+  height: 80px; 
+  left: 35%;
+  animation-duration: 3s;
+  animation-delay: 1s;
+}
+
+.bubble:nth-child(6) {
+  width: 85px;
+  height: 85px; 
+  left: 45%;
+  animation-duration: 4s;
+  animation-delay: 1s;
+}
+
+.bubble:nth-child(7) {
+  width: 70px;
+  height: 70px; 
+  left: 60%;
+  animation-duration: 5s;
+  animation-delay: 2s;
+}
+
+.bubble:nth-child(8) {
+  width: 65px;
+  height: 65px; 
+  left: 70%;
+  animation-duration: 3s;
+  animation-delay: 1s;
+}
+
+.bubble:nth-child(9) {
+  width: 20px;
+  height: 20px; 
+  left: 80%;
+  animation-duration: 4s;
+  animation-delay: 2s;
+}
+
+
+.bubble:nth-child(10) {
+  width: 70px;
+  height: 70px; 
+  left: 90%;
+  animation-duration: 5s;
+  animation-delay: 1s;
+}
+
+
+.bubble:nth-child(11) {
+  width: 30px;
+  height: 30px; 
+  left: 100%;
+  animation-duration: 4s;
+  animation-delay: 2s;
+}
+
+
+.bubble:nth-child(12) {
+  width: 35px;
+  height: 35px; 
+  left: 55%;
+  animation-duration: 5s;
+  animation-delay: 1s;
+}
+
+
+.bubble:nth-child(13) {
+  width: 45px;
+  height: 45px; 
+  left: 65%;
+  animation-duration: 4s;
+  animation-delay: 2s;
+}
+
+
+@keyframes bubbles{
+  0%{
+    bottom: 0;
+    opacity: .3;
+  }
+  25%{
+    opacity: .4;
+    transform: translateX(20px);
+  }
+  50%{
+    bottom: 100vh;
+    opacity: 0;
+  }
+  100%{
+    bottom: 100vh;
+    opacity: 0;
+  }
+}
+
+                                /* products section  */
+.products {
+  /* position: absolute; */
+  background-color: var(--primary-white-color);
+  overflow:auto;
+}
+.products .container h2 {
+  color: var(--pink-1);
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.products .container .sub-title{
+  color: var(--pink-2);
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 58px;
+  line-height: 66px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  
+}
+/* ------hois card */
+
+.products .container ul{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 130px;
+
+}
+.products .container .ice-cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  width: 368px;
+  height: 535px;
+  border-radius: 24px;
+}
+.products .container .ice-cards li {
+  color: var(--primary-white-color);
+  text-align: center;
+  list-style: none;
+}
+.products .container .pink{
+  background-color: var(--pink-1);    
+}
+
+.products .container .coffee{
+  background-color: var(--coffee-ice);    
+}
+
+.products .container .green{
+  background-color: var(--green-ice);    
+}
+
+.bg_image{
+
+}
+
+.products .container .ice-cards li h3 {
+  /* margin: 20px 0 10px 0; */
+  font-family: Titan One;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 34px;
+  letter-spacing: 0.04em;
+  margin-top: 32px;
+  margin-bottom: 30px;
+
+}
+.products .container .ice-cards li p {
+  margin-bottom: 30px;
+  width: 245px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 176%;
+  letter-spacing: 0.04em;
+}
+
+.products .container .ice-cards li svg{
+  width: 40px;
+  height: 40px;
+  margin-bottom: px;
+}
+/* .how-ist-made  */
+
+.how-its-made {
+background-color: #FFF5F6;
+}
+.how-its-made h2 {
+color: var(--pink-1);
+font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 30px;
+line-height: 34px;
+text-align: center;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+}
+
+.how-its-made .sub-title{
+color: var(--pink-2);
+font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 58px;
+line-height: 66px;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+
+}
+.how-its-made .container{
+display: flex;
+max-width: 1200px;
+background-image: url(/img/section1.png);
+}
+
+.how-its-made .container .right {
+width: 50%;
+padding: 15px;
+margin-top: 7px;
+text-align: center;
+}
+.how-its-made .container .left {
+margin-top: 320px;
+width: 50%;
+padding: 15px;
+margin-top: 30px;
+text-align: left;
+}
+.primer{
+width: 463px;
+height: 79px; 
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 176%;
+margin-bottom: 32px;
+/* or 28px */
+
+letter-spacing: 0.04em;
+
+color: #000000;
+}
+.second{
+width: 463px;
+height: 155px;
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 194%;
+/* or 27px */
+
+letter-spacing: 0.04em;
+
+color: #907E82;
+margin-bottom: 40px;
+}
+.how-its-made .down{
+/* align-items: center; */
+}
+.how-its-made ul{
+display: flex;
+justify-content: space-between;
+margin-left: 10%;
+}
+.how-its-made ul li{
+list-style: none;
+text-align: left;
+}
+.how-its-made ul li .icon{
+height: 60px;
+margin-bottom: 20px;
+}
+.how-its-made h3{
+/* list-style: none; */
+font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 58px;
+line-height: 66px;
+/* text-align: right; */
+letter-spacing: 0.04em;
+
+color: #D41443;
+}
+.how-its-made .descrive{
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 176%;
+width: 300px;
+letter-spacing: 0.02em;
+
+color: #000000;
+}
+
+
+/*SECCION ABOUT*/
+
+.container-about{
+  display: flex;
+ 
+
+  background: #FFFFFF;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  justify-content: space-between;
+  /* justify-content: space-evenly; */
+  padding: 0px 16px;
+  /* margin: 0px 16px; */
+
+
+}
+
+ .About .container-about .Aboutcard{
+  display: block; 
+  width: 368px;
+  height: 538px;
+  padding-left: 40px;
+  /* justify-content: space-between;*/
+  /*flex-wrap: wrap;*/
+  /*align-items: flex-end;*/
+
+
+  background: #FFFFFF;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+
+  
+ }
+
+ .About .container-about .Aboutcard .button-coffee{
+
+  
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  border: #F0D1A5;
+  
+/* or 30px */
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+
+  width: 75.1px;
+  height: 28px;
+
+  background: #F0D1A5;
+  border-radius: 6px;
+  margin-bottom: 32px;
+  margin-top: 40px;
+
+ }
+
+ .About .container-about .Aboutcard .button-green{
+
+
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  border: #C2E297;
+/* or 30px */
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+
+  width: 138px;
+  height: 28px;
+  
+  background: #C2E297;
+  border-radius: 6px;
+  margin-bottom: 32px;
+  margin-top: 40px;
+ }
+
+.separador{
+  width: 288px;
+  height: 0px;
+  display: flex;
+  margin-bottom: 32px;
+  margin-top: 32px; 
+  
+
+  border: 1px solid #E1E1E1;
+
+}
+
+.button-coffee > h3 {
+  margin-bottom: 32px;
+
+  width: 67.9px;
+  height: 30px;
+
+
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  /* identical to box height, or 30px */
+
+  letter-spacing: 0.04em;
+
+  color: #000000;
+
+}
+
+.text-card{
+margin-bottom: 32px;
+margin-top: 8px;
+width: 250px;
+height: 50px;
+
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 183%;
+/* or 29px */
+
+letter-spacing: 0.04em;
+
+color: #907E82;
+
+}
+.hour-card{
+margin-bottom: 12px;
+width: 167.7px;
+height: 30px;
+
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 186%;
+/* identical to box height, or 30px */
+
+
+color: #FFA5BA;
+}
+.contact-card{
+margin-bottom: 40px;
+width: 243px;
+height: 50px;
+
+
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 183%;
+/* or 29px */
+color: #907E82;
+
+}
+
+/* HO IS SECTION*/
+
 .ho-is {
     background-color: var(--primary-white-color);
   }
@@ -257,12 +807,13 @@ section{
     font-family: 'Titan One', cursive;
     text-align: center;
   }
-  .ho-is .container h2 span{
+  .ho-is .container.span_animation{
     color: var(--pink-2);
     font-size: 58px;
     font-weight: 400px;
     padding: 30px 0;
     text-align: center;
+    margin-top: 10px;
   }
 
 /* Seccion ABOUT*/
@@ -439,8 +990,100 @@ font-weight: 500;
 font-size: 16px;
 line-height: 183%;
 /* or 29px */
-
-
 color: #907E82;
+
+}
+
+/*Titles Animation*/
+
+
+.title_animation:hover{
+  -webkit-transform: scale(1.3); 
+  transition-duration: 3000ms;
+  letter-spacing: 5px;
+}
+
+.span_animation:hover{
+  -webkit-transform: scale(1.2); 
+  transition-duration: 1000ms;
+  letter-spacing: 5px;
+}
+
+
+/*ANIMATIONS*/
+
+.container >h2:hover{
+  font-size: 32px;
+
+}
+
+.container .sub-title:hover{
+  font-size: 30px;
+
+}
+
+.ice-cards:hover{
+  opacity: .8;
+  filter: alpha(opacity=50);
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  filter: brightness(60%)
+}
+
+.ice-cards .icon:hover{
+  -webkit-transform: rotateZ(-90deg);
+  -moz-transform: rotateZ(-90deg);
+  transform: rotateZ(-90deg);
+  background-color: #D41443;
+  }
+
+.navbar_menu :hover{
+  color: #D41443;
+  font-size: 20px;
+}
+
+.how-its-made >h2:hover{
+  font-size: 32px;
+  transition: all 2s;
+}
+
+.how-its-made .h2 .sub-title:hover{
+  font-size: 60px;
+  transition: all 2s
+}
+
+
+.primer:hover,
+.second:hover{
+  transform: scale(1.1);
+  transition: all 2s
+}
+
+.img_Mooo:hover{
+  -webkit-transform: rotateZ(360deg);
+  -moz-transform: rotateZ(360deg);
+  transform: rotateZ(360deg);
+  transition-duration:8s;
+  }
+
+
+  .down ul li:hover{
+    -webkit-transform: rotateZ(360deg);
+    -moz-transform: rotateZ(360deg);
+    transform: rotateZ(360deg);
+    transition-duration: 4s;
+
+  }
+
+ /* .down .icon:hover{
+    -webkit-transform: rotateZ(90deg);
+    -moz-transform: rotateZ(90deg);
+    transform: rotateZ(90deg);
+   * transition-duration:8s;
+  }*/
+
+.container-about .Aboutcard:hover{
+  box-shadow: 1px 1px 2px #FFB8CA, 0 0 25px #907E82, 0 0 5px #E1E1E1;
 
 }
