--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,49 @@ color: #000000;
     display: block;
   }
 }
+/*------------------------------- section gallery -----------------*/
+  
+.gallery ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.gallery ul .left-row{
+  /* display: inline-block; */
+  align-tracks: initial;
+   margin-bottom: 0px;
+}
+
+ .gallery li {
+  margin: 8px;
+  margin-bottom: 8px;
+  flex-grow: 1;
+  max-width: 138px;
+  align-self :self-end;
+}
+
+.gallery li.big {
+  flex-grow: 0;
+  max-width: 283px;
+}
+
+.gallery img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.full {
+  flex-basis: 100%;
+}
+
+.half {
+  flex-basis: 50%;
+}
 
 
 /* Seccion ABOUT*/
@@ -697,3 +740,158 @@ color: #907E82;
 
 }
 
+/* ---footer-- */
+.color-footer{
+  background-color: #f5e9eb;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  
+}  
+
+.button-primary-footer{
+  font-size: 16px;
+  background-color: #df486d ;
+  color: var(--primary-white-color);
+  font-weight: 700;
+  border-radius: 50px;
+  height: 48px;
+  Width: 159px;
+  max-width: 100%;
+  position: relative;
+  /* : center; */
+  
+  border: none;
+  outline: none;
+  text-transform: capitalize;
+  
+  /* padding: 10px 20px; */
+}
+.button-primary:hover{
+  background-color: var(--gray-hover) ;
+}
+
+.footer-title{
+font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 58px;
+line-height: 66px;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+
+color: #D41443;
+}
+
+ .footer-title-h2{
+  font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 30px;
+line-height: 34px;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+
+color: #FFA5BA;
+
+ }
+
+.contentfooter{
+  /* background: #000000; */
+  display: flex;
+  align-items: center;
+  margin-left: 15%;
+}
+footer .col-2{
+  margin-left: 20%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+address .contact-footer{
+  
+  /* margin-left: 40%; */
+  
+  width: 319px;
+  height: 30px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 186%;
+/* identical to box height, or 30px */
+letter-spacing: 0.02em;
+
+color: #000000;
+}
+
+address .contact-phone{
+  color: var(--pink-2);
+}
+footer .separador{
+  width: 98%;
+  height: 0px;
+  display: flex;
+  margin-bottom: 7px;
+  margin-left: 16px;
+  margin-top: 32px; 
+  border: 1px solid #E1E1E1;
+}
+
+footer .col-2 ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+
+  padding: 10px 20px;
+  margin-bottom: 20px;
+}
+footer .col-2 ul li {
+  display: block;
+  /* width: 35px;
+  height: 35px;
+  border-radius: 25px; */
+}
+
+footer .col-2 ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--pink-1);
+  border-radius: 25px;
+  height: 35px;
+  width: 35px;
+}
+    
+
+footer .col-2 ul li a .icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  border-radius: 35px;
+  fill: var(--primary-white-color);
+  cursor: pointer;
+  height: 35px;
+  width: 35px;
+}
+footer .col-2 ul li:hover a{
+  background-color: var(--pink-2);
+  
+}
+footer .col-2 ul li:hover a .icon{
+  fill: var(--gray-hover);
+}
+
+footer .copy{
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 186%;
+  margin-left: 40%;
+  letter-spacing: 0.02em;
+
+  color: #907E82;
+}
